fixed visible photo at section intro

--- a/css/style.css
+++ b/css/style.css
@@ -232,11 +232,6 @@ header .nav-link-own:hover {
     margin-bottom: 40px;
   }
 }
-@media screen and (max-width: 576px) {
-  .intro-photo {
-    display: none;
-  }
-}
 
 .intro-content a {
   color: #AFB2BF;
