--- a/sass/components/sections/_section-intro.sass
+++ b/sass/components/sections/_section-intro.sass
@@ -22,8 +22,7 @@
     margin-left: auto
     margin-right: auto
     margin-bottom: 40px
-  @media screen and(max-width: 576px)
-    display: none
+ 
 
 .intro-content  
   a
